--- a/index.html
+++ b/index.html
@@ -1153,11 +1153,11 @@
                       <div class="elementor-button-wrapper">
                         <a
                           class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                          href="#"
+                          href="./signin.html"
                         >
                           <span class="elementor-button-content-wrapper">
                             <span class="elementor-button-text"
-                              >let's get started</span
+                              >Login / Register</span
                             >
                           </span>
                         </a>
