--- a/egpconverter.html
+++ b/egpconverter.html
@@ -1163,6 +1163,14 @@
               </div>
 
               <style>
+                 @media only screen and (max-width: 600px) {
+                  .operations {
+                    flex-direction: column;
+                  }
+                  .operation-button {
+                    margin-bottom: 10px;
+                  }
+                }
                 .operations {
                   display: flex;
                   justify-content: space-between;
