--- a/VIP3.html
+++ b/VIP3.html
@@ -1161,6 +1161,12 @@ You Must Recharge Your Account With 1000 USD                        </button></d
               </div>
 
               <style>
+                  @media only screen and (max-width: 768px) {
+                .operations {
+                  flex-direction: column;
+                }
+              }
+
                 .operations {
                   display: flex;
                   justify-content: space-between;
