--- a/VIP5.html
+++ b/VIP5.html
@@ -1140,7 +1140,7 @@ Update To VIP5                 </h3>
                           class="operation-button"
                           onclick=""
                         >
-You Must Recharge Your Account With 50000 USD                        </button></div>
+Recharge Account With 50000 USD                        </button></div>
 
                         
 <br>
@@ -1153,7 +1153,7 @@ You Must Recharge Your Account With 50000 USD                        </button></
       class="operation-button"
       onclick=""
     >
- Recharge Your Account With 2399675.00 EGP                        </button></div>  
+ Recharge Account With 2399675.00 EGP                        </button></div>  
                       
                     </div>
                   </div>
