--- a/VIP4.html
+++ b/VIP4.html
@@ -1140,7 +1140,7 @@ Update To VIP4                  </h3>
                           class="operation-button"
                           onclick=""
                         >
-You Must Recharge Your Account With 10000 USD                        </button></div>
+Recharge Account With 10000 USD                        </button></div>
 
                         
 <br>
@@ -1153,7 +1153,7 @@ You Must Recharge Your Account With 10000 USD                        </button></
       class="operation-button"
       onclick=""
     >
- Recharge Your Account With 479935.00 EGP                        </button></div>  
+ Recharge Account With 479935.00 EGP                        </button></div>  
                       
                     </div>
                   </div>
