--- a/VIP3.html
+++ b/VIP3.html
@@ -1140,7 +1140,7 @@ Update To VIP3                  </h3>
                           class="operation-button"
                           onclick=""
                         >
-You Must Recharge Your Account With 1000 USD                        </button></div>
+Recharge Account With 1000 USD                        </button></div>
 
                         
 <br>
@@ -1153,7 +1153,7 @@ You Must Recharge Your Account With 1000 USD                        </button></d
       class="operation-button"
       onclick=""
     >
- Recharge Your Account With 47993.50 EGP                        </button></div>  
+ Recharge Account With 47993.50 EGP                        </button></div>  
                       
                     </div>
                   </div>
