--- a/VIP2.html
+++ b/VIP2.html
@@ -1140,7 +1140,7 @@ Update To VIP2                 </h3>
                           class="operation-button"
                           onclick=""
                         >
-You Must Recharge Your Account With 250 USD                        </button></div>
+Recharge Account With 250 USD                        </button></div>
 
                         
 <br>
@@ -1153,7 +1153,7 @@ You Must Recharge Your Account With 250 USD                        </button></di
       class="operation-button"
       onclick=""
     >
- Recharge Your Account With 11998.38 EGP                        </button></div>  
+ Recharge Account With 11998.38 EGP                        </button></div>  
                       
                     </div>
                   </div>
