--- a/VIP1.html
+++ b/VIP1.html
@@ -1140,7 +1140,7 @@ Update To VIP1                  </h3>
                           class="operation-button"
                           onclick=""
                         >
-You Must Recharge Your Account With 50 USD                        </button></div>
+Recharge Account With 50 USD                        </button></div>
 
                         
 <br>
@@ -1153,7 +1153,7 @@ You Must Recharge Your Account With 50 USD                        </button></div
       class="operation-button"
       onclick=""
     >
- Recharge Your Account With 2399.68 EGP                        </button></div>  
+ Recharge Account With 2399.68 EGP                        </button></div>  
                       
                     </div>
                   </div>
