--- a/error2.html
+++ b/error2.html
@@ -879,7 +879,7 @@
               <div class="elementor-button-wrapper">
                 <a
                   class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                  href="./newuser.html"
+                  href="./user.html"
                 >
                   <span class="elementor-button-content-wrapper">
                     <span class="elementor-button-text">Back to homepage</span>
