--- a/newuser.html
+++ b/newuser.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tabunk</title>
+    <title>NEW USER -Tabunk</title>
     <meta name="robots" content="max-image-preview:large" />
     <link
       rel="alternate"
