--- a/recharge.html
+++ b/recharge.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <title>Updating-To-VIP &#8211; Tabunk</title>
+    <title>Recharging &#8211; Tabunk</title>
     <meta name="robots" content="max-image-preview:large" />
     <link
       rel="alternate"
