--- a/send.html
+++ b/send.html
@@ -130,8 +130,8 @@ Make Sure That All Informations Is Correct        </p>
                     <input type="email" id="email" name="email" required class="form-input" style="color: #666;" placeholder="Enter Email Of Another Account" />
                 </div>
                 <div class="form-field" style="margin-top: 20px;">
-                    <label for="number" style="color: #666;">Amount</label>
-                    <input type="password" id="password" name="number" required class="form-input" style="color: #666;" placeholder="Enter The Amount" />
+                    <label for="amount" style="color: #666;">Amount</label>
+                    <input type="number" id="password" name="number" required class="form-input" style="color: #666;" placeholder="Enter The Amount" />
                 </div>
                 <div class="form-field" style="margin-top: 20px;">
                     <label for="password" style="color: #666;">Password</label>
