--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="dns-prefetch" href="//s3.envato.com" />
+<link rel="preload" href="https://public-assets.envato-static.com/assets/generated_sprites/logos-20f56d7ae7a08da2c6698db678490c591ce302aedb1fcd05d3ad1e1484d3caf9.png" as="image" />
+<link rel="preload" href="https://public-assets.envato-static.com/assets/generated_sprites/common-5af54247f3a645893af51456ee4c483f6530608e9c15ca4a8ac5a6e994d9a340.png" as="image" />
+
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Tabunk – Banking &amp; Business Loan Elementor Template Kit Preview - ThemeForest</title>
+    <meta name="description" content="&amp;lt;a href=&amp;quot;https://www.youtube.com/channel/UCB1RCmPjzvFyWNN28rtwheQ&amp;quot; rel=&amp;quot;nofollo...">
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1" />
+    <meta name="turbo-visit-control" content="reload">
+
     <title>Tabunk</title>
     <meta name="robots" content="max-image-preview:large" />
     <link
