--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
     />
   </head>
   <body
-    class="home page-template page-template-elementor_header_footer page page-id-381 elementor-default elementor-template-full-width elementor-kit-4 elementor-page elementor-page-381"
+    class="full-screen-preview"
   >
     <div
       class="ekit-template-content-markup ekit-template-content-header ekit-template-content-theme-support"
