--- a/index.html
+++ b/index.html
@@ -28,6 +28,32 @@
 
 
 
+
+ <link rel="dns-prefetch" href="https://s3.envato.com/">
+<link rel="preload" href="https://public-assets.envato-static.com/assets/generated_sprites/logos-20f56d7ae7a08da2c6698db678490c591ce302aedb1fcd05d3ad1e1484d3caf9.png" as="image">
+<link rel="preload" href="https://public-assets.envato-static.com/assets/generated_sprites/common-5af54247f3a645893af51456ee4c483f6530608e9c15ca4a8ac5a6e994d9a340.png" as="image">
+
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+ 
+
+    <script type="text/javascript" async="" src="Tabunk%20%E2%80%93%20Banking%20&amp;%20Business%20Loan%20Elementor%20Template%20Kit%20Preview%20-%20ThemeForest_files/js" nonce="oHV5oNXH4KpSdku8Sjn6Aw=="></script><script async="" src="Tabunk%20%E2%80%93%20Banking%20&amp;%20Business%20Loan%20Elementor%20Template%20Kit%20Preview%20-%20ThemeForest_files/gtm.js"></script><script type="text/javascript" async="" src="Tabunk%20%E2%80%93%20Banking%20&amp;%20Business%20Loan%20Elementor%20Template%20Kit%20Preview%20-%20ThemeForest_files/linkid.js" nonce="oHV5oNXH4KpSdku8Sjn6Aw=="></script><script type="text/javascript" async="" src="Tabunk%20%E2%80%93%20Banking%20&amp;%20Business%20Loan%20Elementor%20Template%20Kit%20Preview%20-%20ThemeForest_files/ec.js" nonce="oHV5oNXH4KpSdku8Sjn6Aw=="></script><script type="text/javascript" async="" src="Tabunk%20%E2%80%93%20Banking%20&amp;%20Business%20Loan%20Elementor%20Template%20Kit%20Preview%20-%20ThemeForest_files/analytics.js"></script><script nonce="oHV5oNXH4KpSdku8Sjn6Aw==">
+
+//<![CDATA[
+  window.dataLayer = window.dataLayer || [];
+
+//]]>
+</script>
+    
+
+
+
+
+
+
+
+     
+
+
     <meta charset="utf-8">
     <link rel="dns-prefetch" href="//s3.envato.com" />
 <link rel="preload" href="https://public-assets.envato-static.com/assets/generated_sprites/logos-20f56d7ae7a08da2c6698db678490c591ce302aedb1fcd05d3ad1e1484d3caf9.png" as="image" />
